# bse-predict

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  config.yaml.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-entrypoint.sh  postgresql.conf  pyproject.toml  requirements.txt
dashboard/: Dockerfile.nginx  nginx.dev.conf  nginx.prod.conf
dashboard/backend/: Dockerfile  requirements.txt
dashboard/frontend/: Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: cloudflare_setup.md  db_migrations.md  deployment_guide.md  future_improvements.md  model_integration_implementation.md  open_interest_implementation.md  project_goals.md  review_report.md  training_analysis_2025-08-06.md
docs/implementation_plans/: phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md
docs/progress_tracking/: progress_phase_1.md  progress_phase_2.md  progress_phase_3.md  progress_phase_4.md
nginx/: Dockerfile  nginx.prod.conf
scripts/: check_data_integrity.sh  check_errors.sh  check_outcomes.sh  check_predictions.sh  env_detect.sh  fix_prediction_outcomes_constraint.py  prepare_first_run.sh  run_local.sh  test_docker_build.sh  test_error_logging.py  test_error_simple.py  test_with_docker.sh
src/: main.py
src/analytics/: __init__.py  model_performance.py  prediction_analytics.py
src/data/: feature_engineer.py  fetcher.py  futures_fetcher.py  (+1 more)
tests/: test_integrated.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_prediction_tracking.py
(+59 files in other folders)
